--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4672,5 +4672,16 @@
     "CL_CF_CO_select_time_tips": "",
     "CL_SL_CM_recommended_program": "추천",
     "CL_SL_CM_rpm": "분당 회전수",
-    "CL_DV_HOB_step2_cooking_used": ""
+    "CL_DV_HOB_step2_cooking_used": "",
+    "CL_CF_FW_cycles_update": "사이클 업데이트",
+    "CL_CF_FW_current_version": "현재 버전:",
+    "CL_CF_FW_new_version": "새로운 버전:",
+    "CL_CF_FW_content": "콘텐츠:",
+    "CL_CF_FW_update": "업데이트 중...",
+    "CL_CF_FW_update_desp": "업그레이드하는 동안 기기를 인터넷에 연결해 두고, 현재 페이지를 닫지 마세요!",
+    "CL_CF_FW_update_completed": "업데이트 완료",
+    "CL_CF_FW_update_failure": "업데이트 실패",
+    "CL_DV_RF_deactivate_sabbath_desc": "안식일 모드는 와인 캐비닛에서 활성화됩니다. 다음 단계에 따라 비활성화하십시오.",
+    "CL_DV_RF_deactivate_sabbath_step_1": "냉장고에 있는 세 개의 점 <img> <font> 3초간 </font> 누르세요.",
+    "CL_DV_RF_deactivate_sabbath_tips": "먼저 기기의 잠금 키를 3초 동안 눌러 안식일 모드를 비활성화합니다."
 }
